// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListRow should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserListRow
    id="123455"
    isMyUser={false}
    teammateNameDisplay="test"
    theme={Object {}}
    user={
      Object {
        "delete_at": 0,
        "id": "21345",
        "username": "user",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(ProfilePicture)
          size={32}
          userId="21345"
        />,
        <Component
          style={
            Object {
              "flexDirection": "row",
              "marginLeft": 5,
            }
          }
        >
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                }
              }
            >
              user
            </Text>
          </Component>
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                }
              }
            >
              (@user)
            </Text>
          </Component>
        </Component>,
      ],
      "enabled": true,
      "id": "21345",
      "onPress": [Function],
      "selectable": undefined,
      "selected": undefined,
      "theme": Object {},
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "size": 32,
          "userId": "21345",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>,
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              >
                (@user)
              </Text>
            </Component>,
          ],
          "style": Object {
            "flexDirection": "row",
            "marginLeft": 5,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "user",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                },
              },
              "ref": null,
              "rendered": "user",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              >
                (@user)
              </Text>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "(@user)",
                "ellipsizeMode": "tail",
                "numberOfLines": 1,
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                },
              },
              "ref": null,
              "rendered": "(@user)",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(ProfilePicture)
            size={32}
            userId="21345"
          />,
          <Component
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 5,
              }
            }
          >
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              >
                (@user)
              </Text>
            </Component>
          </Component>,
        ],
        "enabled": true,
        "id": "21345",
        "onPress": [Function],
        "selectable": undefined,
        "selected": undefined,
        "theme": Object {},
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "size": 32,
            "userId": "21345",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>
              </Component>,
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                >
                  (@user)
                </Text>
              </Component>,
            ],
            "style": Object {
              "flexDirection": "row",
              "marginLeft": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "user",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                  },
                },
                "ref": null,
                "rendered": "user",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                >
                  (@user)
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "(@user)",
                  "ellipsizeMode": "tail",
                  "numberOfLines": 1,
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  },
                },
                "ref": null,
                "rendered": "(@user)",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "intl": Object {
        "formatMessage": [MockFunction],
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`UserListRow should match snapshot for  currentUser with (you) populated in list 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserListRow
    id="123455"
    isMyUser={true}
    teammateNameDisplay="test"
    theme={Object {}}
    user={
      Object {
        "delete_at": 0,
        "id": "21345",
        "username": "user",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(ProfilePicture)
          size={32}
          userId="21345"
        />,
        <Component
          style={
            Object {
              "flexDirection": "row",
              "marginLeft": 5,
            }
          }
        >
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                }
              }
            >
              user
            </Text>
          </Component>
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                }
              }
            />
          </Component>
        </Component>,
      ],
      "enabled": true,
      "id": "21345",
      "onPress": [Function],
      "selectable": undefined,
      "selected": undefined,
      "theme": Object {},
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "size": 32,
          "userId": "21345",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>,
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />
            </Component>,
          ],
          "style": Object {
            "flexDirection": "row",
            "marginLeft": 5,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "user",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                },
              },
              "ref": null,
              "rendered": "user",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": undefined,
                "ellipsizeMode": "tail",
                "numberOfLines": 1,
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(ProfilePicture)
            size={32}
            userId="21345"
          />,
          <Component
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 5,
              }
            }
          >
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />
            </Component>
          </Component>,
        ],
        "enabled": true,
        "id": "21345",
        "onPress": [Function],
        "selectable": undefined,
        "selected": undefined,
        "theme": Object {},
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "size": 32,
            "userId": "21345",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>
              </Component>,
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                />
              </Component>,
            ],
            "style": Object {
              "flexDirection": "row",
              "marginLeft": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "user",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                  },
                },
                "ref": null,
                "rendered": "user",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": undefined,
                  "ellipsizeMode": "tail",
                  "numberOfLines": 1,
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "intl": Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "(@{username} - you)",
                "id": "mobile.more_dms.you",
              },
              Object {
                "username": "user",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      },
    },
    "hydrateIn": undefined,
  },
}
`;

exports[`UserListRow should match snapshot for deactivated user 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserListRow
    id="123455"
    isMyUser={false}
    teammateNameDisplay="test"
    theme={Object {}}
    user={
      Object {
        "delete_at": 100,
        "id": "21345",
        "username": "user",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(ProfilePicture)
          size={32}
          userId="21345"
        />,
        <Component
          style={
            Object {
              "flexDirection": "row",
              "marginLeft": 5,
            }
          }
        >
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                }
              }
            >
              user
            </Text>
          </Component>
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                }
              }
            />
          </Component>
        </Component>,
      ],
      "enabled": true,
      "id": "21345",
      "onPress": [Function],
      "selectable": undefined,
      "selected": undefined,
      "theme": Object {},
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "size": 32,
          "userId": "21345",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>,
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />
            </Component>,
          ],
          "style": Object {
            "flexDirection": "row",
            "marginLeft": 5,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "user",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                },
              },
              "ref": null,
              "rendered": "user",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": undefined,
                "ellipsizeMode": "tail",
                "numberOfLines": 1,
                "style": Object {
                  "color": undefined,
                  "fontSize": 15,
                  "marginLeft": 5,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(ProfilePicture)
            size={32}
            userId="21345"
          />,
          <Component
            style={
              Object {
                "flexDirection": "row",
                "marginLeft": 5,
              }
            }
          >
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                  }
                }
              >
                user
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  }
                }
              />
            </Component>
          </Component>,
        ],
        "enabled": true,
        "id": "21345",
        "onPress": [Function],
        "selectable": undefined,
        "selected": undefined,
        "theme": Object {},
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "size": 32,
            "userId": "21345",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>
              </Component>,
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                />
              </Component>,
            ],
            "style": Object {
              "flexDirection": "row",
              "marginLeft": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                    }
                  }
                >
                  user
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "user",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                  },
                },
                "ref": null,
                "rendered": "user",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 15,
                      "marginLeft": 5,
                    }
                  }
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": undefined,
                  "ellipsizeMode": "tail",
                  "numberOfLines": 1,
                  "style": Object {
                    "color": undefined,
                    "fontSize": 15,
                    "marginLeft": 5,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "context": Object {
      "intl": Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "{displayname} - Deactivated",
                "id": "more_direct_channels.directchannel.deactivated",
              },
              Object {
                "displayname": "(@user)",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      },
    },
    "hydrateIn": undefined,
  },
}
`;
